# ai-dev-kit

./: CODEOWNERS.txt  NOTICE.txt  README.md  install.ps1  install.sh
.github/workflows/: release.yml
databricks-builder-app/: .env.example  README.md  pyproject.toml  requirements.txt
databricks-builder-app/alembic/: env.py
databricks-builder-app/server/db/: database.py
databricks-mcp-server/: pyproject.toml
databricks-mcp-server/databricks_mcp_server/tools/: pdf.py  sql.py
databricks-skills/: README.md  install_skills.sh
databricks-tools-core/: pyproject.toml
databricks-tools-core/databricks_tools_core/pdf/: __init__.py  generator.py
databricks-tools-core/databricks_tools_core/sql/: sql.py
databricks-tools-core/databricks_tools_core/sql/sql_utils/: executor.py  parallel_executor.py
databricks-tools-core/tests/integration/pdf/: test_pdf_generation.py
databricks-tools-core/tests/unit/: test_sql.py
